# court-watch-ja

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  JUDICES.md  LICENSE  README.md  mock-api.js
backend/: .env.example  Cargo.toml
backend/migrations/: 20260429170358_create_judges_table.sql  20260429170422_create_judgments_table.sql  20260429170449_create_user_cases_table.sql  20260429170518_create_notifications_table.sql  20260430000000_create_court_sittings.sql  20260501000001_add_judges_name_unique.sql  20260504000001_user_cases_case_type.sql  20260504000002_create_system_config.sql  20260504000003_data_cleanup.sql  20260504000004_add_user_role.sql  20260504000005_notifications_read_at.sql  20260504000006_fulltext_search.sql  20260504000007_announcement_support.sql  20260506000001_create_parish_court_cases.sql  20260507000001_backfill_court_division.sql  20260512000003_user_cases_case_number_and_settings.sql  20260513000001_create_legal_news.sql  20260514000001_add_source_url_to_judgments.sql  20260515000001_add_tags_to_judgments.sql  20260515000002_add_email_verification.sql  20260516000001_password_change_tokens.sql  20260517000001_create_scraper_state.sql  20260518000001_create_promos.sql  20260518000002_add_notification_link_severity.sql  20260519000001_backfill_judgment_tags.sql  20260519000002_fix_parish_court_dedup.sql  20260522000001_add_archived_at_to_notifications.sql  20260522000002_dedup_court_sittings.sql  20260522000003_create_admin_logs.sql  20260602000001_create_broadcast_emails.sql  20260608000001_notification_idempotency.sql  (+7 more)
backend/src/: config.rs  (+1 more)
(+146 files in other folders)
