[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum            = { version = "0.7", features = ["macros"] }
tokio           = { version = "1",   features = ["full"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
sqlx            = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
jsonwebtoken    = "9"
reqwest         = { version = "0.11", features = ["json", "stream"] }
scraper         = "0.18"
chrono          = { version = "0.4", features = ["serde"] }
dotenvy         = "0.15"
tower-http      = { version = "0.5", features = ["cors", "trace"] }
bcrypt          = "0.15"
tokio-cron-scheduler = "0.9"
pdf-extract     = "0.7"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow          = "1"
thiserror       = "1"
regex           = "1"
roxmltree       = "0.20"
printpdf        = "0.5"
uuid            = { version = "1", features = ["v4"] }
sha2            = "0.10"
